2008-12-18  Armin Burgmeier  <armin@openismus.com>

	* win32_msvc6/:
	* Makefile.am:
	* configure.in: Removed outdated MSVC6 project.

2.24.1:

2008-12-12  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2008/examples/sax_parser/sax_parser.vcproj.HALLWA.Armin.user:
	Removed this generated file. It went in by accident.

	* MSVC_Net2008/examples/sax_parser/sax_parser.vcproj: Added the
	example project file instead, which should have been added from the
	beginning.

2008-12-12  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2005/libxml++/libxml++.vcproj:
	* MSVC_Net2008/libxml++/libxml++.vcproj: Added schema.cc and
	schemavalidator.cc to the project. Bug #563664 (Arjan Franzen).

	* MSVC_Net2005/examples/schemavalidation/schemavalidation.vcproj:
	* MSVC_Net2005/examples/schemavalidation/Makefile.am:
	* MSVC_Net2005/examples/Makefile.am:
	* MSVC_Net2005/libxml++.sln: Added the schema validator example to the
	MSVC8 solution file.

	* MSVC_Net2008/examples/schemavalidation/schemavalidation.vcproj:
	* MSVC_Net2008/examples/schemavalidation/Makefile.am:
	* MSVC_Net2008/examples/Makefile.am:
	* MSVC_Net2008/libxml++.sln: Added the schema validator example to the
	MSVC9 solution file.

2008-12-12  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* libxml++/schema.cc: Fix a typo to fix the build.

2008-12-08  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/validators/validator.cc: check_for_exception(): Use an 
	auto_ptr<> to avoid leaking the exception, as in 
	Parser::check_for_exception().
	Bug #563321 (Arjan Franzen)

2008-12-05  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/schema.cc: release_underlying(): Use xmlSchemaFree() 
	to avoid a leak, as suggested by Balazs Tirpak. Bug #312216.

2008-10-09  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2005/*/*.vcproj: Adapt the new DLL naming convention.

	* MSVC_Net2008/: Added project files for Visual Studio 2008.

	* Makefile.am:
	* configure.in: Added the new files to the distribution.

2.24.0:
